<resources>
    <string name="app_name">Equip</string>


    <!-- LOGIN -->
    <string name="login_username">Usuario</string>
    <string name="login_password">Contrasinal</string>
    <string name="login_access">Entrar</string>
    <string name="login_img">Logo Equip</string>
    <string name="login_error_invalid_data">Datos incorrectos</string>
    <string name="login_error_img">Icono de Error</string>

    <!-- PRINCIPAL -->
    <string name="principal_title">Menu principal</string>
    <string name="principal_allowed_places">Ver areas permitidas</string>
    <string name="principal_actual_state">Ver estado actual</string>
    <string name="principal_toolbar_title">Areas Permitidas</string>
    <string name="principal_loading_places_equipments">Obtendo Areas e Equipamentos</string>

    <!-- PLACES -->
    <string name="places_title">Areas Permitidas</string>

    <!-- PLACE -->
    <string name="place_equipment_text">Equipamento necesario:</string>
    <string name="place_loading">Cargando Plano e Equipamento</string>

    <!-- STATE -->
    <string name="state_title">Estado Actual</string>
    <string name="state_equipment_text">Equipamento:</string>
    <string name="state_loading">Cargando Estado Actual</string>
    <string name="state_no_area">Ningunha area proxima</string>

    <!-- EQUIPMENT SERVICE -->
    <string name="equipment_service_notification_title">Servicio de xestión do operario</string>
    <string name="equipment_service_notification_subtitle">O dispositivo esta lendo areas e equipamentos</string>
    <string name="equipment_service_equipment_missing_notification_title">Falta o seguinte equipamento</string>
</resources>
